--- a/Sample/build.gradle
+++ b/Sample/build.gradle
@@ -3,8 +3,6 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
 
-
-
     defaultConfig {
         applicationId "com.sunzn.divider.sample"
         minSdkVersion 14
@@ -33,4 +31,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':Library')
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
